# cpp

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
crates/cpp-core/: Cargo.toml
crates/cpp-core/src/: context.rs  error.rs  lib.rs  manifest.rs  permission.rs  query.rs  relation.rs  stream.rs  types.rs
crates/cpp-protocol/: Cargo.toml
crates/cpp-protocol/src/: lib.rs  messages.rs  methods.rs  transport.rs
crates/cpp-runtime/: Cargo.toml
crates/cpp-runtime/src/: cache.rs  lib.rs  registry.rs  resolver.rs  session.rs
crates/cpp-sdk/: Cargo.toml
crates/cpp-sdk/src/: adapter.rs  client.rs  lib.rs  provider.rs
crates/cpp-server/: Cargo.toml
crates/cpp-server/src/: dashboard.html  lib.rs  main.rs
crates/cpp-transport-http/: Cargo.toml
crates/cpp-transport-http/src/: lib.rs
crates/cpp-transport-stdio/: Cargo.toml
crates/cpp-transport-stdio/src/: lib.rs
examples/benchmark/: Cargo.toml
examples/benchmark/src/: main.rs
examples/simple-query/: Cargo.toml
examples/simple-query/src/: main.rs
examples/streaming/: Cargo.toml
examples/streaming/src/: main.rs
providers/datetime/: Cargo.toml
providers/datetime/src/: lib.rs  provider.rs
providers/filesystem/: Cargo.toml
providers/filesystem/src/: lib.rs  provider.rs
providers/git/: Cargo.toml
providers/git/src/: lib.rs  provider.rs
providers/github/: README.md  __init__.py  github_provider.py  pyproject.toml  test_github_provider.py
providers/jira/: README.md  jira_provider.py  pyproject.toml
providers/slack/: README.md  pyproject.toml  slack_provider.py
sdks/python/: README.md  pyproject.toml
sdks/python/cpp_sdk/: __init__.py  client.py  context.py  errors.py  protocol.py  provider.py  query.py  types.py
sdks/python/cpp_sdk/bridges/: __init__.py  mcp_bridge.py  mcp_config_example.json
sdks/python/tests/: __init__.py  test_types.py
spec/: RFC-0000-Philosophy.md  RFC-0001-CPP.md
