[package]
name = "cpp-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SDK for building CPP context providers and agent clients"

[dependencies]
cpp-core = { workspace = true }
cpp-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
