[package]
name = "cpp-cpp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "cpp-server"
path = "src/main.rs"

[dependencies]
cpp-core = { workspace = true }
cpp-runtime = { workspace = true }
cpp-provider-filesystem = { path = "../../providers/filesystem" }
cpp-provider-git = { path = "../../providers/git" }
cpp-provider-datetime = { path = "../../providers/datetime" }
cpp-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }


