[package]
name = "cpp-example-benchmark"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Context window budget negotiation benchmark for CPP"

[[bin]]
name = "benchmark"
path = "src/main.rs"

[dependencies]
cpp-core = { workspace = true }
cpp-sdk = { workspace = true }
cpp-runtime = { workspace = true }
cpp-provider-filesystem = { path = "../../providers/filesystem" }
cpp-provider-git = { path = "../../providers/git" }
cpp-provider-datetime = { path = "../../providers/datetime" }
tokio = { workspace = true }
chrono = { workspace = true }
