[package]
name = "cpp-provider-datetime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Datetime and temporal context provider for CPP"

[dependencies]
cpp-core = { workspace = true }
cpp-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
iana-time-zone = "0.1"
