[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cpp-provider-github"
version = "0.1.0"
description = "GitHub context provider for the Context Provider Protocol (CPP)"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "cpp-sdk>=0.1.0",
    "httpx>=0.27,<1.0",
]
