[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends.build"

[project]
name = "cpp-sdk"
version = "0.1.0"
description = "Python SDK for the Context Provider Protocol (CPP) — the perception layer for AI agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "CPP Contributors" },
]
keywords = ["ai", "context", "protocol", "agents", "llm", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "httpx>=0.27,<1.0",
    "websockets>=13.0,<15.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/nicholasgasior/context-provider-protocol"
Repository = "https://github.com/nicholasgasior/context-provider-protocol"

[tool.hatch.build.targets.wheel]
packages = ["cpp_sdk"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
